Fix pathways header on mobile screens

--- a/assets/styles/pathways.scss
+++ b/assets/styles/pathways.scss
@@ -3,7 +3,7 @@
 .pathways-content {
   text-align: center;
   & > h2 {
-    font-size: 6rem;
+    font-size: 5rem;
     padding-top: 2rem;
   }
 }
@@ -130,12 +130,15 @@
 /* MEDIA QUERIES */
 /*****************/
 @media (min-width: $tiny-screen-size) {
-  .pathways-content > h2 {
-    font-size: 8rem; 
-  }
   .hero .hero-content h2 {
     font-size: 4rem;
   }
+}
+
+@media (min-width: $small-screen-size) {
+  .pathways-content > h2 {
+    font-size: 8rem; 
+  } 
 }
 
 @media (min-width: $medium-screen-size) {
